# pycemrg-model-creation

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API_reference.md  TASKS.md
scripts/integration/: run_uvc_ventricular.py
scripts/utilities/: mesh_cli.py
src/pycemrg_carp_tools/: __init__.py  config.py  tools.py  types.py
src/pycemrg_carp_tools/logic/: __init__.py  contracts.py  surfaces.py
src/pycemrg_carp_tools/tools/: __init__.py  wrappers.py
src/pycemrg_carp_tools/utilities/: mesh.py
src/pycemrg_model_creation/: __init__.py  config.py  types.py
src/pycemrg_model_creation/logic/: __init__.py  builders.py  contracts.py  meshing.py  refinement.py  surfaces.py  uvc.py
src/pycemrg_model_creation/tools/: __init__.py  wrappers.py
src/pycemrg_model_creation/utilities/: config.py  geometry.py  image.py  mesh.py  uvc.py
tests/: conftest.py
tests/integration/: test_meshing_workflows.py  test_surface_logic_ventricular.py  test_uvc_logic_ventricular.py
