[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycemrg-model-creation"
version = "0.1.0"
authors = [
  { name="Jose Alonso Solis-Lemus", email="j.solis-lemus@imperial.ac.uk" },
]
description = "A high-level framework for cardiac model creation and simulation setup."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pycemrg>=0.1.0",
    "numpy>=1.21",
    "pyvista>=0.38",
    "pyyaml>=6.0", # <-- Keep this declaration
]

[project.urls]
Homepage = "https://github.com/OpenHeartDevelopers/pycemrg-model-creation" # not set up yet
"Bug Tracker" = "https://github.com/OpenHeartDevelopers/pycemrg-model-creation/issues" # not set up yet

[tool.setuptools.packages.find]
where = ["src"]
